[package]
name = "rust-advent-of-code-2018"
version = "0.1.0"
authors = ["cfiet"]
edition = "2018"

[features]
day1 = []
day2 = []
day3 = []
day4 = []
day5 = []
day6 = []
all = ["day1", "day2", "day3", "day4", "day5", "day6"]
default = ["day6"]

[dependencies]
regex = "*"
lazy_static = "*"
chrono = "*"
time = "*"