[package]
name = "rust-advent-of-code-2018"
version = "0.1.0"
authors = ["cfiet"]
edition = "2018"

[features]
day1 = []
day2 = []
day3 = []
day4 = []
day5 = []
day7 = []
day8 = []
day9 = []
all = ["day1", "day2", "day3", "day4", "day5", "day7", "day8", "day9"]
default = ["day9"]
test = ["day9"]

[dependencies]
regex = "*"
lazy_static = "*"
chrono = "*"
time = "*"
itertools = "*"